src/Compilador/Parser/parser_test.output
Grammar

    0 $accept: programa $end

    1 programa: ID '{' lista_sentencias '}'
    2         | error '{' lista_sentencias '}'
    3         | '{' lista_sentencias '}'
    4         | ID lista_sentencias '}'
    5         | ID '{' lista_sentencias

    6 sentencia: sentencia_declarativa
    7          | sentencia_ejecutable

    8 sentencia_declarativa: declaracion_variable ';'
    9                      | declaracion_funcion

   10 sentencia_ejecutable: asignacion ';'
   11                     | asignacion
   12                     | control
   13                     | llamada_funcion ';'
   14                     | llamada_funcion
   15                     | print ';'
   16                     | print
   17                     | retorno ';'
   18                     | retorno

   19 declaracion_variable: tipo lista_identificadores
   20                     | error lista_identificadores
   21                     | tipo asignacion
   22                     | error asignacion

   23 declaracion_funcion: tipo ID '(' lista_parametros_formales ')' '{' lista_sentencias '}'
   24                    | tipo ID '(' ')' '{' lista_sentencias '}'
   25                    | error ID '(' lista_parametros_formales ')' '{' lista_sentencias '}'
   26                    | tipo ID '(' lista_parametros_formales ')' '{' '}'
   27                    | tipo ID '(' ')' '{' '}'

   28 lista_sentencias: sentencia
   29                 | lista_sentencias sentencia

   30 lista_sentencias_ejecutables: sentencia_ejecutable
   31                             | lista_sentencias_ejecutables sentencia_ejecutable

   32 lista_parametros_formales: parametro_formal
   33                          | lista_parametros_formales ',' parametro_formal
   34                          | lista_parametros_formales error parametro_formal

   35 lista_parametros_reales: parametro_real_compuesto
   36                        | lista_parametros_reales ',' parametro_real_compuesto
   37                        | lista_parametros_reales error parametro_real_compuesto

   38 lista_identificadores: IDCOMP
   39                      | lista_identificadores ',' IDCOMP
   40                      | lista_identificadores error IDCOMP
   41                      | ID
   42                      | lista_identificadores ',' ID

   43 parametro_formal: CR tipo ID
   44                 | tipo ID
   45                 | LAMBDA tipo ID
   46                 | CR LAMBDA tipo ID

   47 parametro_real_compuesto: parametro_real FLECHA parametro_formal

   48 parametro_real: expresion
   49               | lambda

   50 control: sentencia_IF ';'
   51        | do_until ';'

   52 sentencia_IF: IF '(' condicion ')' '{' lista_sentencias_ejecutables '}' ENDIF
   53             | IF '(' condicion ')' '{' lista_sentencias_ejecutables '}' ELSE '{' lista_sentencias_ejecutables '}' ENDIF

   54 condicion: expresion comparador expresion

   55 do_until: DO '{' lista_sentencias_ejecutables '}' UNTIL '(' condicion ')'

   56 comparador: MENORIGUAL
   57           | MAYORIGUAL
   58           | IGUALIGUAL
   59           | DISTINTO
   60           | '>'
   61           | '<'

   62 tipo: LONG
   63     | STRING

   64 asignacion: IDCOMP ASIGNAR expresion
   65           | ID ASIGNAR expresion

   66 expresion: expresion '+' termino
   67          | expresion '-' termino
   68          | termino
   69          | TRUNC '(' expresion ')'

   70 termino: termino '*' factor
   71        | termino '/' factor
   72        | factor

   73 factor: IDCOMP
   74       | CTEL
   75       | CTEF
   76       | llamada_funcion
   77       | ID

   78 llamada_funcion: IDCOMP '(' lista_parametros_reales ')'
   79                | ID '(' lista_parametros_reales ')'
   80                | IDCOMP '(' ')'
   81                | ID '(' ')'

   82 print: PRINT '(' STRING ')'
   83      | PRINT '(' expresion ')'

   84 lambda: '(' tipo ')' '{' lista_sentencias_ejecutables

   85 retorno: RETURN '(' expresion ')'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 23 24 25 26 27 52 53 55 69 78 79 80 81 82 83 84 85
')' (41) 23 24 25 26 27 52 53 55 69 78 79 80 81 82 83 84 85
'*' (42) 70
'+' (43) 66
',' (44) 33 36 39 42
'-' (45) 67
'/' (47) 71
';' (59) 8 10 13 15 17 50 51
'<' (60) 61
'>' (62) 60
'{' (123) 1 2 3 5 23 24 25 26 27 52 53 55 84
'}' (125) 1 2 3 4 23 24 25 26 27 52 53 55
error (256) 2 20 22 25 34 37 40
ID (258) 1 4 5 23 24 25 26 27 41 42 43 44 45 46 65 77 79 81
CTEL (259) 74
IF (260) 52 53
ELSE (261) 53
ENDIF (262) 52 53
PRINT (263) 82 83
RETURN (264) 85
LAMBDA (265) 45 46
ASIGNAR (266) 64 65
MENORIGUAL (267) 56
MAYORIGUAL (268) 57
IGUALIGUAL (269) 58
DISTINTO (270) 59
FLECHA (271) 47
LONG (272) 62
DO (273) 55
UNTIL (274) 55
TRUNC (275) 69
CR (276) 43 46
STRING (277) 63 82
CTEF (278) 75
IDCOMP (279) 38 39 40 64 73 78 80


Nonterminals, with rules where they appear

$accept (37)
    on left: 0
programa (38)
    on left: 1 2 3 4 5, on right: 0
sentencia (39)
    on left: 6 7, on right: 28 29
sentencia_declarativa (40)
    on left: 8 9, on right: 6
sentencia_ejecutable (41)
    on left: 10 11 12 13 14 15 16 17 18, on right: 7 30 31
declaracion_variable (42)
    on left: 19 20 21 22, on right: 8
declaracion_funcion (43)
    on left: 23 24 25 26 27, on right: 9
lista_sentencias (44)
    on left: 28 29, on right: 1 2 3 4 5 23 24 25 29
lista_sentencias_ejecutables (45)
    on left: 30 31, on right: 31 52 53 55 84
lista_parametros_formales (46)
    on left: 32 33 34, on right: 23 25 26 33 34
lista_parametros_reales (47)
    on left: 35 36 37, on right: 36 37 78 79
lista_identificadores (48)
    on left: 38 39 40 41 42, on right: 19 20 39 40 42
parametro_formal (49)
    on left: 43 44 45 46, on right: 32 33 34 47
parametro_real_compuesto (50)
    on left: 47, on right: 35 36 37
parametro_real (51)
    on left: 48 49, on right: 47
control (52)
    on left: 50 51, on right: 12
sentencia_IF (53)
    on left: 52 53, on right: 50
condicion (54)
    on left: 54, on right: 52 53 55
do_until (55)
    on left: 55, on right: 51
comparador (56)
    on left: 56 57 58 59 60 61, on right: 54
tipo (57)
    on left: 62 63, on right: 19 21 23 24 26 27 43 44 45 46 84
asignacion (58)
    on left: 64 65, on right: 10 11 21 22
expresion (59)
    on left: 66 67 68 69, on right: 48 54 64 65 66 67 69 83 85
termino (60)
    on left: 70 71 72, on right: 66 67 68 70 71
factor (61)
    on left: 73 74 75 76 77, on right: 70 71 72
llamada_funcion (62)
    on left: 78 79 80 81, on right: 13 14 76
print (63)
    on left: 82 83, on right: 15 16
lambda (64)
    on left: 84, on right: 49
retorno (65)
    on left: 85, on right: 17 18


state 0

    0 $accept: . programa $end

    error  shift, and go to state 1
    ID     shift, and go to state 2
    '{'    shift, and go to state 3

    programa  go to state 4


state 1

    2 programa: error . '{' lista_sentencias '}'

    '{'  shift, and go to state 5


state 2

    1 programa: ID . '{' lista_sentencias '}'
    4         | ID . lista_sentencias '}'
    5         | ID . '{' lista_sentencias

    error   shift, and go to state 6
    ID      shift, and go to state 7
    IF      shift, and go to state 8
    PRINT   shift, and go to state 9
    RETURN  shift, and go to state 10
    LONG    shift, and go to state 11
    DO      shift, and go to state 12
    STRING  shift, and go to state 13
    IDCOMP  shift, and go to state 14
    '{'     shift, and go to state 15

    sentencia              go to state 16
    sentencia_declarativa  go to state 17
    sentencia_ejecutable   go to state 18
    declaracion_variable   go to state 19
    declaracion_funcion    go to state 20
    lista_sentencias       go to state 21
    control                go to state 22
    sentencia_IF           go to state 23
    do_until               go to state 24
    tipo                   go to state 25
    asignacion             go to state 26
    llamada_funcion        go to state 27
    print                  go to state 28
    retorno                go to state 29


state 3

    3 programa: '{' . lista_sentencias '}'

    error   shift, and go to state 6
    ID      shift, and go to state 7
    IF      shift, and go to state 8
    PRINT   shift, and go to state 9
    RETURN  shift, and go to state 10
    LONG    shift, and go to state 11
    DO      shift, and go to state 12
    STRING  shift, and go to state 13
    IDCOMP  shift, and go to state 14

    sentencia              go to state 16
    sentencia_declarativa  go to state 17
    sentencia_ejecutable   go to state 18
    declaracion_variable   go to state 19
    declaracion_funcion    go to state 20
    lista_sentencias       go to state 30
    control                go to state 22
    sentencia_IF           go to state 23
    do_until               go to state 24
    tipo                   go to state 25
    asignacion             go to state 26
    llamada_funcion        go to state 27
    print                  go to state 28
    retorno                go to state 29


state 4

    0 $accept: programa . $end

    $end  shift, and go to state 31


state 5

    2 programa: error '{' . lista_sentencias '}'

    error   shift, and go to state 6
    ID      shift, and go to state 7
    IF      shift, and go to state 8
    PRINT   shift, and go to state 9
    RETURN  shift, and go to state 10
    LONG    shift, and go to state 11
    DO      shift, and go to state 12
    STRING  shift, and go to state 13
    IDCOMP  shift, and go to state 14

    sentencia              go to state 16
    sentencia_declarativa  go to state 17
    sentencia_ejecutable   go to state 18
    declaracion_variable   go to state 19
    declaracion_funcion    go to state 20
    lista_sentencias       go to state 32
    control                go to state 22
    sentencia_IF           go to state 23
    do_until               go to state 24
    tipo                   go to state 25
    asignacion             go to state 26
    llamada_funcion        go to state 27
    print                  go to state 28
    retorno                go to state 29


state 6

   20 declaracion_variable: error . lista_identificadores
   22                     | error . asignacion
   25 declaracion_funcion: error . ID '(' lista_parametros_formales ')' '{' lista_sentencias '}'

    ID      shift, and go to state 33
    IDCOMP  shift, and go to state 34

    lista_identificadores  go to state 35
    asignacion             go to state 36


state 7

   65 asignacion: ID . ASIGNAR expresion
   79 llamada_funcion: ID . '(' lista_parametros_reales ')'
   81                | ID . '(' ')'

    ASIGNAR  shift, and go to state 37
    '('      shift, and go to state 38


state 8

   52 sentencia_IF: IF . '(' condicion ')' '{' lista_sentencias_ejecutables '}' ENDIF
   53             | IF . '(' condicion ')' '{' lista_sentencias_ejecutables '}' ELSE '{' lista_sentencias_ejecutables '}' ENDIF

    '('  shift, and go to state 39


state 9

   82 print: PRINT . '(' STRING ')'
   83      | PRINT . '(' expresion ')'

    '('  shift, and go to state 40


state 10

   85 retorno: RETURN . '(' expresion ')'

    '('  shift, and go to state 41


state 11

   62 tipo: LONG .

    $default  reduce using rule 62 (tipo)


state 12

   55 do_until: DO . '{' lista_sentencias_ejecutables '}' UNTIL '(' condicion ')'

    '{'  shift, and go to state 42


state 13

   63 tipo: STRING .

    $default  reduce using rule 63 (tipo)


state 14

   64 asignacion: IDCOMP . ASIGNAR expresion
   78 llamada_funcion: IDCOMP . '(' lista_parametros_reales ')'
   80                | IDCOMP . '(' ')'

    ASIGNAR  shift, and go to state 43
    '('      shift, and go to state 44


state 15

    1 programa: ID '{' . lista_sentencias '}'
    5         | ID '{' . lista_sentencias

    error   shift, and go to state 6
    ID      shift, and go to state 7
    IF      shift, and go to state 8
    PRINT   shift, and go to state 9
    RETURN  shift, and go to state 10
    LONG    shift, and go to state 11
    DO      shift, and go to state 12
    STRING  shift, and go to state 13
    IDCOMP  shift, and go to state 14

    sentencia              go to state 16
    sentencia_declarativa  go to state 17
    sentencia_ejecutable   go to state 18
    declaracion_variable   go to state 19
    declaracion_funcion    go to state 20
    lista_sentencias       go to state 45
    control                go to state 22
    sentencia_IF           go to state 23
    do_until               go to state 24
    tipo                   go to state 25
    asignacion             go to state 26
    llamada_funcion        go to state 27
    print                  go to state 28
    retorno                go to state 29


state 16

   28 lista_sentencias: sentencia .

    $default  reduce using rule 28 (lista_sentencias)


state 17

    6 sentencia: sentencia_declarativa .

    $default  reduce using rule 6 (sentencia)


state 18

    7 sentencia: sentencia_ejecutable .

    $default  reduce using rule 7 (sentencia)


state 19

    8 sentencia_declarativa: declaracion_variable . ';'

    ';'  shift, and go to state 46


state 20

    9 sentencia_declarativa: declaracion_funcion .

    $default  reduce using rule 9 (sentencia_declarativa)


state 21

    4 programa: ID lista_sentencias . '}'
   29 lista_sentencias: lista_sentencias . sentencia

    error   shift, and go to state 6
    ID      shift, and go to state 7
    IF      shift, and go to state 8
    PRINT   shift, and go to state 9
    RETURN  shift, and go to state 10
    LONG    shift, and go to state 11
    DO      shift, and go to state 12
    STRING  shift, and go to state 13
    IDCOMP  shift, and go to state 14
    '}'     shift, and go to state 47

    sentencia              go to state 48
    sentencia_declarativa  go to state 17
    sentencia_ejecutable   go to state 18
    declaracion_variable   go to state 19
    declaracion_funcion    go to state 20
    control                go to state 22
    sentencia_IF           go to state 23
    do_until               go to state 24
    tipo                   go to state 25
    asignacion             go to state 26
    llamada_funcion        go to state 27
    print                  go to state 28
    retorno                go to state 29


state 22

   12 sentencia_ejecutable: control .

    $default  reduce using rule 12 (sentencia_ejecutable)


state 23

   50 control: sentencia_IF . ';'

    ';'  shift, and go to state 49


state 24

   51 control: do_until . ';'

    ';'  shift, and go to state 50


state 25

   19 declaracion_variable: tipo . lista_identificadores
   21                     | tipo . asignacion
   23 declaracion_funcion: tipo . ID '(' lista_parametros_formales ')' '{' lista_sentencias '}'
   24                    | tipo . ID '(' ')' '{' lista_sentencias '}'
   26                    | tipo . ID '(' lista_parametros_formales ')' '{' '}'
   27                    | tipo . ID '(' ')' '{' '}'

    ID      shift, and go to state 51
    IDCOMP  shift, and go to state 34

    lista_identificadores  go to state 52
    asignacion             go to state 53


state 26

   10 sentencia_ejecutable: asignacion . ';'
   11                     | asignacion .

    ';'  shift, and go to state 54

    $default  reduce using rule 11 (sentencia_ejecutable)


state 27

   13 sentencia_ejecutable: llamada_funcion . ';'
   14                     | llamada_funcion .

    ';'  shift, and go to state 55

    $default  reduce using rule 14 (sentencia_ejecutable)


state 28

   15 sentencia_ejecutable: print . ';'
   16                     | print .

    ';'  shift, and go to state 56

    $default  reduce using rule 16 (sentencia_ejecutable)


state 29

   17 sentencia_ejecutable: retorno . ';'
   18                     | retorno .

    ';'  shift, and go to state 57

    $default  reduce using rule 18 (sentencia_ejecutable)


state 30

    3 programa: '{' lista_sentencias . '}'
   29 lista_sentencias: lista_sentencias . sentencia

    error   shift, and go to state 6
    ID      shift, and go to state 7
    IF      shift, and go to state 8
    PRINT   shift, and go to state 9
    RETURN  shift, and go to state 10
    LONG    shift, and go to state 11
    DO      shift, and go to state 12
    STRING  shift, and go to state 13
    IDCOMP  shift, and go to state 14
    '}'     shift, and go to state 58

    sentencia              go to state 48
    sentencia_declarativa  go to state 17
    sentencia_ejecutable   go to state 18
    declaracion_variable   go to state 19
    declaracion_funcion    go to state 20
    control                go to state 22
    sentencia_IF           go to state 23
    do_until               go to state 24
    tipo                   go to state 25
    asignacion             go to state 26
    llamada_funcion        go to state 27
    print                  go to state 28
    retorno                go to state 29


state 31

    0 $accept: programa $end .

    $default  accept


state 32

    2 programa: error '{' lista_sentencias . '}'
   29 lista_sentencias: lista_sentencias . sentencia

    error   shift, and go to state 6
    ID      shift, and go to state 7
    IF      shift, and go to state 8
    PRINT   shift, and go to state 9
    RETURN  shift, and go to state 10
    LONG    shift, and go to state 11
    DO      shift, and go to state 12
    STRING  shift, and go to state 13
    IDCOMP  shift, and go to state 14
    '}'     shift, and go to state 59

    sentencia              go to state 48
    sentencia_declarativa  go to state 17
    sentencia_ejecutable   go to state 18
    declaracion_variable   go to state 19
    declaracion_funcion    go to state 20
    control                go to state 22
    sentencia_IF           go to state 23
    do_until               go to state 24
    tipo                   go to state 25
    asignacion             go to state 26
    llamada_funcion        go to state 27
    print                  go to state 28
    retorno                go to state 29


state 33

   25 declaracion_funcion: error ID . '(' lista_parametros_formales ')' '{' lista_sentencias '}'
   41 lista_identificadores: ID .
   65 asignacion: ID . ASIGNAR expresion

    ASIGNAR  shift, and go to state 37
    '('      shift, and go to state 60

    $default  reduce using rule 41 (lista_identificadores)


state 34

   38 lista_identificadores: IDCOMP .
   64 asignacion: IDCOMP . ASIGNAR expresion

    ASIGNAR  shift, and go to state 43

    $default  reduce using rule 38 (lista_identificadores)


state 35

   20 declaracion_variable: error lista_identificadores .
   39 lista_identificadores: lista_identificadores . ',' IDCOMP
   40                      | lista_identificadores . error IDCOMP
   42                      | lista_identificadores . ',' ID

    error  shift, and go to state 61
    ','    shift, and go to state 62

    ';'  reduce using rule 20 (declaracion_variable)


state 36

   22 declaracion_variable: error asignacion .

    $default  reduce using rule 22 (declaracion_variable)


state 37

   65 asignacion: ID ASIGNAR . expresion

    ID      shift, and go to state 63
    CTEL    shift, and go to state 64
    TRUNC   shift, and go to state 65
    CTEF    shift, and go to state 66
    IDCOMP  shift, and go to state 67

    expresion        go to state 68
    termino          go to state 69
    factor           go to state 70
    llamada_funcion  go to state 71


state 38

   79 llamada_funcion: ID '(' . lista_parametros_reales ')'
   81                | ID '(' . ')'

    ID      shift, and go to state 63
    CTEL    shift, and go to state 64
    TRUNC   shift, and go to state 65
    CTEF    shift, and go to state 66
    IDCOMP  shift, and go to state 67
    '('     shift, and go to state 72
    ')'     shift, and go to state 73

    lista_parametros_reales   go to state 74
    parametro_real_compuesto  go to state 75
    parametro_real            go to state 76
    expresion                 go to state 77
    termino                   go to state 69
    factor                    go to state 70
    llamada_funcion           go to state 71
    lambda                    go to state 78


state 39

   52 sentencia_IF: IF '(' . condicion ')' '{' lista_sentencias_ejecutables '}' ENDIF
   53             | IF '(' . condicion ')' '{' lista_sentencias_ejecutables '}' ELSE '{' lista_sentencias_ejecutables '}' ENDIF

    ID      shift, and go to state 63
    CTEL    shift, and go to state 64
    TRUNC   shift, and go to state 65
    CTEF    shift, and go to state 66
    IDCOMP  shift, and go to state 67

    condicion        go to state 79
    expresion        go to state 80
    termino          go to state 69
    factor           go to state 70
    llamada_funcion  go to state 71


state 40

   82 print: PRINT '(' . STRING ')'
   83      | PRINT '(' . expresion ')'

    ID      shift, and go to state 63
    CTEL    shift, and go to state 64
    TRUNC   shift, and go to state 65
    STRING  shift, and go to state 81
    CTEF    shift, and go to state 66
    IDCOMP  shift, and go to state 67

    expresion        go to state 82
    termino          go to state 69
    factor           go to state 70
    llamada_funcion  go to state 71


state 41

   85 retorno: RETURN '(' . expresion ')'

    ID      shift, and go to state 63
    CTEL    shift, and go to state 64
    TRUNC   shift, and go to state 65
    CTEF    shift, and go to state 66
    IDCOMP  shift, and go to state 67

    expresion        go to state 83
    termino          go to state 69
    factor           go to state 70
    llamada_funcion  go to state 71


state 42

   55 do_until: DO '{' . lista_sentencias_ejecutables '}' UNTIL '(' condicion ')'

    ID      shift, and go to state 7
    IF      shift, and go to state 8
    PRINT   shift, and go to state 9
    RETURN  shift, and go to state 10
    DO      shift, and go to state 12
    IDCOMP  shift, and go to state 14

    sentencia_ejecutable          go to state 84
    lista_sentencias_ejecutables  go to state 85
    control                       go to state 22
    sentencia_IF                  go to state 23
    do_until                      go to state 24
    asignacion                    go to state 26
    llamada_funcion               go to state 27
    print                         go to state 28
    retorno                       go to state 29


state 43

   64 asignacion: IDCOMP ASIGNAR . expresion

    ID      shift, and go to state 63
    CTEL    shift, and go to state 64
    TRUNC   shift, and go to state 65
    CTEF    shift, and go to state 66
    IDCOMP  shift, and go to state 67

    expresion        go to state 86
    termino          go to state 69
    factor           go to state 70
    llamada_funcion  go to state 71


state 44

   78 llamada_funcion: IDCOMP '(' . lista_parametros_reales ')'
   80                | IDCOMP '(' . ')'

    ID      shift, and go to state 63
    CTEL    shift, and go to state 64
    TRUNC   shift, and go to state 65
    CTEF    shift, and go to state 66
    IDCOMP  shift, and go to state 67
    '('     shift, and go to state 72
    ')'     shift, and go to state 87

    lista_parametros_reales   go to state 88
    parametro_real_compuesto  go to state 75
    parametro_real            go to state 76
    expresion                 go to state 77
    termino                   go to state 69
    factor                    go to state 70
    llamada_funcion           go to state 71
    lambda                    go to state 78


state 45

    1 programa: ID '{' lista_sentencias . '}'
    5         | ID '{' lista_sentencias .
   29 lista_sentencias: lista_sentencias . sentencia

    error   shift, and go to state 6
    ID      shift, and go to state 7
    IF      shift, and go to state 8
    PRINT   shift, and go to state 9
    RETURN  shift, and go to state 10
    LONG    shift, and go to state 11
    DO      shift, and go to state 12
    STRING  shift, and go to state 13
    IDCOMP  shift, and go to state 14
    '}'     shift, and go to state 89

    $end  reduce using rule 5 (programa)

    sentencia              go to state 48
    sentencia_declarativa  go to state 17
    sentencia_ejecutable   go to state 18
    declaracion_variable   go to state 19
    declaracion_funcion    go to state 20
    control                go to state 22
    sentencia_IF           go to state 23
    do_until               go to state 24
    tipo                   go to state 25
    asignacion             go to state 26
    llamada_funcion        go to state 27
    print                  go to state 28
    retorno                go to state 29


state 46

    8 sentencia_declarativa: declaracion_variable ';' .

    $default  reduce using rule 8 (sentencia_declarativa)


state 47

    4 programa: ID lista_sentencias '}' .

    $default  reduce using rule 4 (programa)


state 48

   29 lista_sentencias: lista_sentencias sentencia .

    $default  reduce using rule 29 (lista_sentencias)


state 49

   50 control: sentencia_IF ';' .

    $default  reduce using rule 50 (control)


state 50

   51 control: do_until ';' .

    $default  reduce using rule 51 (control)


state 51

   23 declaracion_funcion: tipo ID . '(' lista_parametros_formales ')' '{' lista_sentencias '}'
   24                    | tipo ID . '(' ')' '{' lista_sentencias '}'
   26                    | tipo ID . '(' lista_parametros_formales ')' '{' '}'
   27                    | tipo ID . '(' ')' '{' '}'
   41 lista_identificadores: ID .
   65 asignacion: ID . ASIGNAR expresion

    ASIGNAR  shift, and go to state 37
    '('      shift, and go to state 90

    $default  reduce using rule 41 (lista_identificadores)


state 52

   19 declaracion_variable: tipo lista_identificadores .
   39 lista_identificadores: lista_identificadores . ',' IDCOMP
   40                      | lista_identificadores . error IDCOMP
   42                      | lista_identificadores . ',' ID

    error  shift, and go to state 61
    ','    shift, and go to state 62

    ';'  reduce using rule 19 (declaracion_variable)


state 53

   21 declaracion_variable: tipo asignacion .

    $default  reduce using rule 21 (declaracion_variable)


state 54

   10 sentencia_ejecutable: asignacion ';' .

    $default  reduce using rule 10 (sentencia_ejecutable)


state 55

   13 sentencia_ejecutable: llamada_funcion ';' .

    $default  reduce using rule 13 (sentencia_ejecutable)


state 56

   15 sentencia_ejecutable: print ';' .

    $default  reduce using rule 15 (sentencia_ejecutable)


state 57

   17 sentencia_ejecutable: retorno ';' .

    $default  reduce using rule 17 (sentencia_ejecutable)


state 58

    3 programa: '{' lista_sentencias '}' .

    $default  reduce using rule 3 (programa)


state 59

    2 programa: error '{' lista_sentencias '}' .

    $default  reduce using rule 2 (programa)


state 60

   25 declaracion_funcion: error ID '(' . lista_parametros_formales ')' '{' lista_sentencias '}'

    LAMBDA  shift, and go to state 91
    LONG    shift, and go to state 11
    CR      shift, and go to state 92
    STRING  shift, and go to state 13

    lista_parametros_formales  go to state 93
    parametro_formal           go to state 94
    tipo                       go to state 95


state 61

   40 lista_identificadores: lista_identificadores error . IDCOMP

    IDCOMP  shift, and go to state 96


state 62

   39 lista_identificadores: lista_identificadores ',' . IDCOMP
   42                      | lista_identificadores ',' . ID

    ID      shift, and go to state 97
    IDCOMP  shift, and go to state 98


state 63

   77 factor: ID .
   79 llamada_funcion: ID . '(' lista_parametros_reales ')'
   81                | ID . '(' ')'

    '('  shift, and go to state 38

    $default  reduce using rule 77 (factor)


state 64

   74 factor: CTEL .

    $default  reduce using rule 74 (factor)


state 65

   69 expresion: TRUNC . '(' expresion ')'

    '('  shift, and go to state 99


state 66

   75 factor: CTEF .

    $default  reduce using rule 75 (factor)


state 67

   73 factor: IDCOMP .
   78 llamada_funcion: IDCOMP . '(' lista_parametros_reales ')'
   80                | IDCOMP . '(' ')'

    '('  shift, and go to state 44

    $default  reduce using rule 73 (factor)


state 68

   65 asignacion: ID ASIGNAR expresion .
   66 expresion: expresion . '+' termino
   67          | expresion . '-' termino

    '+'  shift, and go to state 100
    '-'  shift, and go to state 101

    $default  reduce using rule 65 (asignacion)


state 69

   68 expresion: termino .
   70 termino: termino . '*' factor
   71        | termino . '/' factor

    '*'  shift, and go to state 102
    '/'  shift, and go to state 103

    $default  reduce using rule 68 (expresion)


state 70

   72 termino: factor .

    $default  reduce using rule 72 (termino)


state 71

   76 factor: llamada_funcion .

    $default  reduce using rule 76 (factor)


state 72

   84 lambda: '(' . tipo ')' '{' lista_sentencias_ejecutables

    LONG    shift, and go to state 11
    STRING  shift, and go to state 13

    tipo  go to state 104


state 73

   81 llamada_funcion: ID '(' ')' .

    $default  reduce using rule 81 (llamada_funcion)


state 74

   36 lista_parametros_reales: lista_parametros_reales . ',' parametro_real_compuesto
   37                        | lista_parametros_reales . error parametro_real_compuesto
   79 llamada_funcion: ID '(' lista_parametros_reales . ')'

    error  shift, and go to state 105
    ')'    shift, and go to state 106
    ','    shift, and go to state 107


state 75

   35 lista_parametros_reales: parametro_real_compuesto .

    $default  reduce using rule 35 (lista_parametros_reales)


state 76

   47 parametro_real_compuesto: parametro_real . FLECHA parametro_formal

    FLECHA  shift, and go to state 108


state 77

   48 parametro_real: expresion .
   66 expresion: expresion . '+' termino
   67          | expresion . '-' termino

    '+'  shift, and go to state 100
    '-'  shift, and go to state 101

    $default  reduce using rule 48 (parametro_real)


state 78

   49 parametro_real: lambda .

    $default  reduce using rule 49 (parametro_real)


state 79

   52 sentencia_IF: IF '(' condicion . ')' '{' lista_sentencias_ejecutables '}' ENDIF
   53             | IF '(' condicion . ')' '{' lista_sentencias_ejecutables '}' ELSE '{' lista_sentencias_ejecutables '}' ENDIF

    ')'  shift, and go to state 109


state 80

   54 condicion: expresion . comparador expresion
   66 expresion: expresion . '+' termino
   67          | expresion . '-' termino

    MENORIGUAL  shift, and go to state 110
    MAYORIGUAL  shift, and go to state 111
    IGUALIGUAL  shift, and go to state 112
    DISTINTO    shift, and go to state 113
    '>'         shift, and go to state 114
    '<'         shift, and go to state 115
    '+'         shift, and go to state 100
    '-'         shift, and go to state 101

    comparador  go to state 116


state 81

   82 print: PRINT '(' STRING . ')'

    ')'  shift, and go to state 117


state 82

   66 expresion: expresion . '+' termino
   67          | expresion . '-' termino
   83 print: PRINT '(' expresion . ')'

    ')'  shift, and go to state 118
    '+'  shift, and go to state 100
    '-'  shift, and go to state 101


state 83

   66 expresion: expresion . '+' termino
   67          | expresion . '-' termino
   85 retorno: RETURN '(' expresion . ')'

    ')'  shift, and go to state 119
    '+'  shift, and go to state 100
    '-'  shift, and go to state 101


state 84

   30 lista_sentencias_ejecutables: sentencia_ejecutable .

    $default  reduce using rule 30 (lista_sentencias_ejecutables)


state 85

   31 lista_sentencias_ejecutables: lista_sentencias_ejecutables . sentencia_ejecutable
   55 do_until: DO '{' lista_sentencias_ejecutables . '}' UNTIL '(' condicion ')'

    ID      shift, and go to state 7
    IF      shift, and go to state 8
    PRINT   shift, and go to state 9
    RETURN  shift, and go to state 10
    DO      shift, and go to state 12
    IDCOMP  shift, and go to state 14
    '}'     shift, and go to state 120

    sentencia_ejecutable  go to state 121
    control               go to state 22
    sentencia_IF          go to state 23
    do_until              go to state 24
    asignacion            go to state 26
    llamada_funcion       go to state 27
    print                 go to state 28
    retorno               go to state 29


state 86

   64 asignacion: IDCOMP ASIGNAR expresion .
   66 expresion: expresion . '+' termino
   67          | expresion . '-' termino

    '+'  shift, and go to state 100
    '-'  shift, and go to state 101

    $default  reduce using rule 64 (asignacion)


state 87

   80 llamada_funcion: IDCOMP '(' ')' .

    $default  reduce using rule 80 (llamada_funcion)


state 88

   36 lista_parametros_reales: lista_parametros_reales . ',' parametro_real_compuesto
   37                        | lista_parametros_reales . error parametro_real_compuesto
   78 llamada_funcion: IDCOMP '(' lista_parametros_reales . ')'

    error  shift, and go to state 105
    ')'    shift, and go to state 122
    ','    shift, and go to state 107


state 89

    1 programa: ID '{' lista_sentencias '}' .

    $default  reduce using rule 1 (programa)


state 90

   23 declaracion_funcion: tipo ID '(' . lista_parametros_formales ')' '{' lista_sentencias '}'
   24                    | tipo ID '(' . ')' '{' lista_sentencias '}'
   26                    | tipo ID '(' . lista_parametros_formales ')' '{' '}'
   27                    | tipo ID '(' . ')' '{' '}'

    LAMBDA  shift, and go to state 91
    LONG    shift, and go to state 11
    CR      shift, and go to state 92
    STRING  shift, and go to state 13
    ')'     shift, and go to state 123

    lista_parametros_formales  go to state 124
    parametro_formal           go to state 94
    tipo                       go to state 95


state 91

   45 parametro_formal: LAMBDA . tipo ID

    LONG    shift, and go to state 11
    STRING  shift, and go to state 13

    tipo  go to state 125


state 92

   43 parametro_formal: CR . tipo ID
   46                 | CR . LAMBDA tipo ID

    LAMBDA  shift, and go to state 126
    LONG    shift, and go to state 11
    STRING  shift, and go to state 13

    tipo  go to state 127


state 93

   25 declaracion_funcion: error ID '(' lista_parametros_formales . ')' '{' lista_sentencias '}'
   33 lista_parametros_formales: lista_parametros_formales . ',' parametro_formal
   34                          | lista_parametros_formales . error parametro_formal

    error  shift, and go to state 128
    ')'    shift, and go to state 129
    ','    shift, and go to state 130


state 94

   32 lista_parametros_formales: parametro_formal .

    $default  reduce using rule 32 (lista_parametros_formales)


state 95

   44 parametro_formal: tipo . ID

    ID  shift, and go to state 131


state 96

   40 lista_identificadores: lista_identificadores error IDCOMP .

    $default  reduce using rule 40 (lista_identificadores)


state 97

   42 lista_identificadores: lista_identificadores ',' ID .

    $default  reduce using rule 42 (lista_identificadores)


state 98

   39 lista_identificadores: lista_identificadores ',' IDCOMP .

    $default  reduce using rule 39 (lista_identificadores)


state 99

   69 expresion: TRUNC '(' . expresion ')'

    ID      shift, and go to state 63
    CTEL    shift, and go to state 64
    TRUNC   shift, and go to state 65
    CTEF    shift, and go to state 66
    IDCOMP  shift, and go to state 67

    expresion        go to state 132
    termino          go to state 69
    factor           go to state 70
    llamada_funcion  go to state 71


state 100

   66 expresion: expresion '+' . termino

    ID      shift, and go to state 63
    CTEL    shift, and go to state 64
    CTEF    shift, and go to state 66
    IDCOMP  shift, and go to state 67

    termino          go to state 133
    factor           go to state 70
    llamada_funcion  go to state 71


state 101

   67 expresion: expresion '-' . termino

    ID      shift, and go to state 63
    CTEL    shift, and go to state 64
    CTEF    shift, and go to state 66
    IDCOMP  shift, and go to state 67
